--- a/onclick/index.html
+++ b/onclick/index.html
@@ -23,7 +23,7 @@
                     <h1>ninja</h1>
                     <p><i>noun</i></p>
                     <p class="plural">Plural: <i>ninjas</i></p>
-                    <button id="likes">13 likes</button>
+                    <button id="likes" onclick="alert('Ninja was liked')">13 likes</button>
                 </div>
                 <div class="col-2" id="col-2-word">
                     <p class="description">A practictioner skilled in the <a href="">Japanese</a> art of the <a href="">Ninjutsu</a></p>
@@ -34,7 +34,7 @@
                     <h1>ninja</h1>
                     <p><i>noun</i></p>
                     <p class="plural">Plural: <i>ninjas</i></p>
-                    <button id="likes">37 likes</button>
+                    <button id="likes" onclick="alert('Ninja was liked')">37 likes</button>
                 </div>
                 <div class="col-2" id="col-2-word">
                     <p class="description">A <a href="">programmer</a> who breaks down problems with <a href="">zen</a>-like focus</p>
